--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Styled Web Page/<h1>
+    <h1>Styled Web Page<h1>
     <h2>Introduction</h2>
     <p>welcome to my styled web page! This is a paragraph of text styled with CSS.</p>
     <h3>About Me</h3>
