--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -6,7 +6,7 @@
     <title>Styled Web Page</title>
     <style>
         head{
-            background-color:#c8dff3;
+            background-color:#007ce8;
         }
         h1{
             color: #77B250;
