--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -6,7 +6,7 @@
     <title>Styled Web Page</title>
     <style>
         head{
-            background-color:#007ce8;
+            background-color:#d4e7f7;
         }
         h1{
             color: #77B250;
