--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styled Web Page</title>
     <style>
-        head{
+        body{
             background-color:#d4e7f7;
         }
         h1{
