--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -14,6 +14,9 @@
         h2{
             color: #2196F3;
         }
+        table{
+            border-collapse: collapse;
+        }
     </style>
 </head>
 <body>
