--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -17,6 +17,15 @@
         table{
             border-collapse: collapse;
         }
+        a{
+            color: orange;
+        }
+        th{
+            background-color: antiquewhite;
+        }
+        td{
+            background-color: white;
+        }
     </style>
 </head>
 <body>
