--- a/kadai03/index.html
+++ b/kadai03/index.html
@@ -24,6 +24,8 @@
             background-color: antiquewhite;
         }
         td{
+            width: 15em;
+            text-align: left;
             background-color: white;
         }
     </style>
