--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -29,8 +29,8 @@
         border-radius: 0px;
     }
     img{
-        width: 10px; 
-        height: 10px; 
+        width: 10%; 
+        height: auto; 
     }
 </style>
 <body>
