--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -8,14 +8,14 @@
 <style>
     #box1{
         background-color: #e6f7ff;
-        border: 2px #333;
+        border: 2px solid #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
     }
     #box2{
         background-color: #fff2e6;
-        border: 2px #333;
+        border: 2px solid #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 5px;
@@ -23,7 +23,7 @@
     }
     #box3{
         background-color: #f9e6ff;
-        border: 2px #333;
+        border: 2px dashed #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 0px;
