--- a/kadai0901/index.html
+++ b/kadai0901/index.html
@@ -37,21 +37,20 @@
     <h1>Box Design Practice</h1>
 <div id="box1">
     <h2>BOX 1</h2>
-    <p>This is the first box. It has a light blue background, rounded corners, and a solid border. This box includes an image below to</p>
-    <p>enhance the visual appeal of the content. The image should be relevant to the content described and help illustrate the point.</p>
+    <p>This is the first box. It has a light blue background, rounded corners, and a solid border. This box includes an image below to
+       enhance the visual appeal of the content. The image should be relevant to the content described and help illustrate the point.</p>
     <img src="images/box1.jpg" alt="box1">
 </div>
 <div id="box2">
     <h2>BOX 2</h2>
-    <P>This is the second box. It has a light orange background, slightly rounded corners, a solid border, and a shadow. lncluding an</P>
-    <p>image in this box helps break up the text and provides a visual example of the content. The use of CSS box shadow enhances the</p>
-    <p>3D effect of this box</p>
+    <P>This is the second box. It has a light orange background, slightly rounded corners, a solid border, and a shadow. lncluding an
+       image in this box helps break up the text and provides a visual example of the content. The use of CSS box shadow enhances the
+       3D effect of this box</p>
     <img src="images/box2.jpg" alt="box2">
 </div>
 <div id="box3">
     <h2>BOX 3</h2>
-    <p>This is the third box. It has a light purple background, no rounded corners, and a dashed border. This box also includes an image.</p>
-    <p>which helps to demonstrate how different styles and borders can be applied to create distinct visual sections within a webpage</p>
+    <p>This is the third box. It has a light purple background, no rounded corners, and a dashed border. This box also includes an image, which helps to demonstrate how different styles and borders can be applied to create distinct visual sections within a webpage</p>
     <img src="images/box3.jpg" alt="box3">
 </div>
 </body>
