--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -26,7 +26,8 @@ h1.q1::before { /* 背景の表示設定 */
 h1.q1::after { /* くの字の表示設定 */
   content: "";
   position: absolute;
-  margin: auto;
+  position: relative;
+  padding-left: 15px;
   top: 0;
   bottom: 0;
   left: 8px;
