--- a/kadai1101/index.html
+++ b/kadai1101/index.html
@@ -26,11 +26,10 @@ h1.q1::before { /* 背景の表示設定 */
 h1.q1::after { /* くの字の表示設定 */
   content: "";
   position: absolute;
-  position: relative;
-  padding-left: 15px;
+  margin: auto;
   top: 0;
   bottom: 0;
-  left: 8px;
+  left: 10px;
   width: 7px;
   height: 7px;
   border-top: 3px solid #fff;
