--- a/kadai1102/index.html
+++ b/kadai1102/index.html
@@ -6,6 +6,25 @@
     <title>吹き出しデザインを実証しましょう。</title>
 </head>
 <style>
+    h1.q2{ 
+        position: relative;   
+        display: inline-block;  
+        margin: 1.5em 0;   
+        padding: 7px 10px;   
+        min-width: 120px;   
+        max-width: 100%;   
+        color: #555;   
+        font-size: 16px;   
+        background: #90ee90; 
+    } 
+    h1.q2:before {   
+        content: "";   
+        position: absolute;   
+        top: 100%;   left: 50%;   
+        margin-left: -15px;   
+        border: 15px solid transparent;   
+        border-top: 15px solid #e0edff; 
+    }
     body{
         background-color: #fff;
         color: #666;
