--- a/kadai1102/index.html
+++ b/kadai1102/index.html
@@ -20,10 +20,10 @@
     h1.q2:before {   
         content: "";   
         position: absolute;   
-        top: 100%;   left: 50%;   
+        top: 100%;   left: 20%;   
         margin-left: -15px;   
         border: 15px solid transparent;   
-        border-top: 15px solid #e0edff; 
+        border-top: 15px solid #90ee90; 
     }
     body{
         background-color: #fff;
