--- a/kadai1201/index.html
+++ b/kadai1201/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Design Practice</title>
+    <title>Responsive Design Practice</title>
 </head>
 <style>
     #box1{
-        background-color: #e6f7ff;
-        border: 2px solid #333;
+        background-color: lightblue;
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
     }
     #box2{
         background-color: #fff2e6;
-        border: 2px solid #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 5px;
@@ -23,7 +21,6 @@
     }
     #box3{
         background-color: #f9e6ff;
-        border: 2px dashed #333;
         padding: 20px;
         margin: 20px 0;
         border-radius: 0px;
@@ -34,23 +31,20 @@
     }
 </style>
 <body>
-    <h1>Box Design Practice</h1>
+    <h1>Responsive Design Practice</h1>
 <div id="box1">
-    <h2>BOX 1</h2>
-    <p>This is the first box. It has a light blue background, rounded corners, and a solid border. This box includes an image below to
-       enhance the visual appeal of the content. The image should be relevant to the content described and help illustrate the point.</p>
+    <h2>Section 1</h2>
+    <p>This is the first section. It has a light blue background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
     <img src="images/section1.jpg" alt="section1">
 </div>
 <div id="box2">
-    <h2>BOX 2</h2>
-    <P>This is the second box. It has a light orange background, slightly rounded corners, a solid border, and a shadow. lncluding an
-       image in this box helps break up the text and provides a visual example of the content. The use of CSS box shadow enhances the
-       3D effect of this box</p>
+    <h2>Sectiom 2</h2>
+    <P>This is the second section. It has a light orange background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
     <img src="images/section2.jpg" alt="section2">
 </div>
 <div id="box3">
-    <h2>BOX 3</h2>
-    <p>This is the third box. It has a light purple background, no rounded corners, and a dashed border. This box also includes an image, which helps to demonstrate how different styles and borders can be applied to create distinct visual sections within a webpage</p>
+    <h2>Section 3</h2>
+    <p>This is the third section. It has a light purple background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes</p>
     <img src="images/section3.jpg" alt="section3">
 </div>
 </body>
