--- a/kadai1201/index.html
+++ b/kadai1201/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     #box1{
-        background-color: lightblue;
+        background-color: #dbf4ff;
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
@@ -29,6 +29,15 @@
         width: 10%; 
         height: auto; 
     }
+    body{
+        background-color: #e6f7ff;
+    }
+    @media screen and (max-width: 760px){
+         
+    }
+    @media screen and (min-width: 1024px){
+
+}
 </style>
 <body>
     <h1>Responsive Design Practice</h1>
