--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Design Practice</title>
+    <title>Responsive Design with Button Actions</title>
 </head>
 <style>
     #box1{
@@ -11,8 +11,19 @@
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
-        width: 540px;
-        height: 500px;
+    }
+    #box2{
+        background-color: #fff2e6;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 5px;
+        box-shadow: 3px 3px 10px rada(0,0,0,0,1);
+    }
+    #box3{
+        background-color: #f9e6ff;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 0px;
     }
     img{
         width: 10%; 
@@ -22,29 +33,14 @@
         background-color: #e6f7ff;
     }
     @media screen and (max-width: 760px){
-        #box2{
-        background-color: #fff2e6;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 5px;
-        box-shadow: 3px 3px 10px rada(0,0,0,0,1);
-        height: 500px;
-        flex-basis: 540;
-        flex-grow: 1;
+         
     }
-    #box3{
-        background-color: #f9e6ff;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 0px;
-        height: 500px;
-        flex-basis: 540;
-        flex-grow: 1;
-    }
-    }
+    @media screen and (min-width: 1024px){
+
+}
 </style>
 <body>
-    <h1>Responsive Design Practice</h1>
+    <h1>Responsive Design with Button Actions</h1>
 <div id="box1">
     <h2>Section 1</h2>
     <p>This is the first section. It has a light blue background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
@@ -59,6 +55,10 @@
     <h2>Section 3</h2>
     <p>This is the third section. It has a light purple background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes</p>
     <img src="images/section3.jpg" alt="section3">
+</div>
+<div id="box4">
+    <h2>Section 4</h2>
+    <p>This is the fourth section. It has a light green background, padding. margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
 </div>
 </body>
 </html>
