--- a/kadai1201/index.html
+++ b/kadai1201/index.html
@@ -11,8 +11,21 @@
         padding: 20px;
         margin: 20px 0;
         border-radius: 10px;
-        width: 540px;
-        height: 500px;
+        width: 300px;
+        height: 300px;
+    }
+    #box2{
+        background-color: #fff2e6;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 5px;
+        box-shadow: 3px 3px 10px rada(0,0,0,0,1);
+    }
+    #box3{
+        background-color: #f9e6ff;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 0px;
     }
     img{
         width: 10%; 
@@ -22,25 +35,17 @@
         background-color: #e6f7ff;
     }
     @media screen and (max-width: 760px){
-        #box2{
-        background-color: #fff2e6;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 5px;
-        box-shadow: 3px 3px 10px rada(0,0,0,0,1);
-        height: 500px;
-        flex-basis: 540;
-        flex-grow: 1;
-    }
-    #box3{
-        background-color: #f9e6ff;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 0px;
-        height: 500px;
-        flex-basis: 540;
-        flex-grow: 1;
-    }
+         #box2{
+            height: 300px;
+            flex-basis: 300px;
+            flex-grow: 1;
+         }
+         #box3{
+            height: 300px;
+            flex-basis: 300px;
+            flex-grow: 1;
+         }
+         
     }
 </style>
 <body>
