--- a/テスト/index.html
+++ b/テスト/index.html
@@ -113,6 +113,28 @@
             </div>
             <button class="button" onclick="followAlert()">Follow</button>
         </div>
+        <div class="profile-card">
+            <img src="img/profile.jpg" alt="Profile Image">
+            <h2>John Doe</h2>
+            <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+            <button class="button" onclick="followAlert()">Follow</button>
+        </div>
+        <div class="profile-card">
+            <img src="img/profile.jpg" alt="Profile Image">
+            <h2>John Doe</h2>
+            <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+            <button class="button" onclick="followAlert()">Follow</button>
+        </div>
     </div>
 </body>
 </html>
