--- a/kadai1401/index.html
+++ b/kadai1401/index.html
@@ -15,6 +15,11 @@
             height: 100vh;
             margin: 0;
         }
+        .container {
+            display: flex;
+            justify-content: space-around;
+            width: 80%;
+        }
         .profile-card {
             background-color: white;
             border-radius: 10px;
@@ -79,38 +84,40 @@
     </script>
  </head>
  <body>
-    <div class="profile-card">
-        <img src="img/profile.jpg" alt="Profile Image">
-        <h2>John Doe</h2>
-        <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+    <div class="container">
+        <div class="profile-card">
+            <img src="img/profile.jpg" alt="Profile Image">
+            <h2>John Doe</h2>
+            <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+            <button class="button" onclick="followAlert()">Follow</button>
         </div>
-        <button class="button" onclick="followAlert()">Follow</button>
-    </div>
-    <div class="profile-card">
-        <img src="img/profile.jpg" alt="Profile Image">
-        <h2>John Doe</h2>
-        <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+        <div class="profile-card">
+            <img src="img/profile.jpg" alt="Profile Image">
+            <h2>John Doe</h2>
+            <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+            <button class="button" onclick="followAlert()">Follow</button>
         </div>
-        <button class="button" onclick="followAlert()">Follow</button>
-    </div>
-    <div class="profile-card">
-        <img src="img/profile.jpg" alt="Profile Image">
-        <h2>John Doe</h2>
-        <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+        <div class="profile-card">
+            <img src="img/profile.jpg" alt="Profile Image">
+            <h2>John Doe</h2>
+            <p>Web Developer & Designer. Passionate about creating interactive and dynamic web experiences.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+            </div>
+            <button class="button" onclick="followAlert()">Follow</button>
         </div>
-        <button class="button" onclick="followAlert()">Follow</button>
     </div>
  </body>
  </html>
