--- a/kadai1201/index.html
+++ b/kadai1201/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Design Practice</title>
     <style>
+        h1{
+            width: 100%;
+        }
         body {
             background-color: #e6f7ff;
             display: flex;
