--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -26,7 +26,7 @@
         border-radius: 0px;
     }
     img{
-        width: 10%; 
+        width: 30%; 
         height: auto; 
     }
     body{
@@ -59,6 +59,7 @@
 <div id="box4">
     <h2>Section 4</h2>
     <p>This is the fourth section. It has a light green background, padding. margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
+    <img src="images/section4.jpg" alt="section4">
 </div>
 </body>
 </html>
