--- a/kadai1201/index.html
+++ b/kadai1201/index.html
@@ -36,7 +36,7 @@
             width: 32%;
         }
         img {
-            width: 80%; 
+            width: 500px; 
             height: auto; 
         }
         @media screen and (max-width: 1024px) {
