--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -4,62 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Design with Button Actions</title>
+    <style>
+        h1{
+            width: 100%;
+        }
+        body {
+            background-color: #e6f7ff;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        #box1, #box2, #box3, #box4 {
+            padding: 20px;
+            margin: 20px 0;
+            box-sizing: border-box;
+        }
+        #box1 {
+            background-color: #dbf4ff;
+            border-radius: 10px;
+            width: 23%;
+        }
+        #box2 {
+            background-color: #fff2e6;
+            border-radius: 5px;
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+            width: 23%;
+        }
+        #box3 {
+            background-color: #f9e6ff;
+            border-radius: 0px;
+            width: 23%;
+        }
+        #box4 {
+            background-color: #e6ffe6;
+            border-radius: 0px;
+            width: 23%;
+        }
+        img {
+            width: 100%; 
+            height: auto; 
+        }
+        @media screen and (max-width: 1024px) {
+            #box1, #box2 {
+                width: 48%;
+            }
+            #box3, #box4 {
+                width: 48%;
+            }
+        }
+        @media screen and (max-width: 760px) {
+            body {
+                flex-direction: column;
+                align-items: center;
+            }
+            #box1, #box2, #box3, #box4 {
+                width: 80%;
+            }
+        }
+    </style>
 </head>
-<style>
-    #box1{
-        background-color: #dbf4ff;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 10px;
-    }
-    #box2{
-        background-color: #fff2e6;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 5px;
-        box-shadow: 3px 3px 10px rada(0,0,0,0,1);
-    }
-    #box3{
-        background-color: #f9e6ff;
-        padding: 20px;
-        margin: 20px 0;
-        border-radius: 0px;
-    }
-    img{
-        width: 30%; 
-        height: auto; 
-    }
-    body{
-        background-color: #e6f7ff;
-    }
-    @media screen and (max-width: 760px){
-         
-    }
-    @media screen and (min-width: 1024px){
-
-}
-</style>
 <body>
     <h1>Responsive Design with Button Actions</h1>
-<div id="box1">
-    <h2>Section 1</h2>
-    <p>This is the first section. It has a light blue background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
-    <img src="images/section1.jpg" alt="section1">
-</div>
-<div id="box2">
-    <h2>Section 2</h2>
-    <P>This is the second section. It has a light orange background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
-    <img src="images/section2.jpg" alt="section2">
-</div>
-<div id="box3">
-    <h2>Section 3</h2>
-    <p>This is the third section. It has a light purple background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes</p>
-    <img src="images/section3.jpg" alt="section3">
-</div>
-<div id="box4">
-    <h2>Section 4</h2>
-    <p>This is the fourth section. It has a light green background, padding. margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
-    <img src="images/section4.jpg" alt="section4">
-</div>
+    <div id="box1">
+        <h2>Section 1</h2>
+        <p>This is the first section. It has a light blue background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
+        <img src="images/section1.jpg" alt="section1">
+    </div>
+    <div id="box2">
+        <h2>Section 2</h2>
+        <p>This is the second section. It has a light orange background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
+        <img src="images/section2.jpg" alt="section2">
+    </div>
+    <div id="box3">
+        <h2>Section 3</h2>
+        <p>This is the third section. It has a light purple background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
+        <img src="images/section3.jpg" alt="section3">
+    </div>
+    <div id="box4">
+        <h2>Section 4</h2>
+        <p>This is the fourth section. It has a light green background, padding, margin, and a box shadow. The layout adjusts responsively to different screen sizes.</p>
+        <img src="images/section4.jpg" alt="section4">
+    </div>
 </body>
 </html>
