--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -7,10 +7,13 @@
     <style>
         h1{
             background-color: #000;
+            color: #ffffff;
+            font-size: 30px;
             width: 100%;
         }
         #maku{
             background-color: #000;
+            color: #ffffff;
             width: 100%;
         }
         body {
