--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -10,6 +10,8 @@
             color: #ffffff;
             font-size: 30px;
             width: 100%;
+            height: 50px;
+            margin-top: 0px;
         }
         #maku{
             background-color: #000;
@@ -30,23 +32,23 @@
         #box1 {
             background-color: #dbf4ff;
             border-radius: 10px;
-            width: 23%;
+            width: 24%;
         }
         #box2 {
             background-color: #fff2e6;
             border-radius: 5px;
             box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-            width: 23%;
+            width: 24%;
         }
         #box3 {
             background-color: #f9e6ff;
             border-radius: 0px;
-            width: 23%;
+            width: 24%;
         }
         #box4 {
             background-color: #e6ffe6;
             border-radius: 0px;
-            width: 23%;
+            width: 24%;
         }
         img {
             width: 80%; 
