--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -10,8 +10,9 @@
             color: #ffffff;
             font-size: 30px;
             width: 100%;
-            height: 50px;
+            height: 200px;
             margin-top: 0px;
+            text-align: center;
         }
         #maku{
             background-color: #000;
