--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -10,14 +10,14 @@
             color: #ffffff;
             font-size: 30px;
             width: 100%;
-            height: 200px;
-            margin-top: 0px;
+            height: 150px;
             text-align: center;
         }
         #maku{
             background-color: #000;
             color: #ffffff;
             width: 100%;
+            text-align: center;
         }
         body {
             background-color: #e6f7ff;
