--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -10,8 +10,9 @@
             color: #ffffff;
             font-size: 30px;
             width: 100%;
-            height: 150px;
+            height: 80px;
             text-align: center;
+            vertical-align: middle;
         }
         #maku{
             background-color: #000;
