--- a/kadai1301/index.html
+++ b/kadai1301/index.html
@@ -12,7 +12,8 @@
             width: 100%;
             height: 80px;
             text-align: center;
-            vertical-align: middle;
+            vertical-align: auto;
+            top: 0px;
         }
         #maku{
             background-color: #000;
