--- a/training_js03-2/tahiti.html
+++ b/training_js03-2/tahiti.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <h1>タヒチの風景</h1>
-    <img src="tahiti01.jpg"onmouseenter="alert('タヒチの写真');">
+    <img src="tahiti01.jpg"onmouseenter="alert('タヒチの写真です。');">
 </body>
 </html>
