--- a/training_js03/sample05-1.html
+++ b/training_js03/sample05-1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h3>問題</h3>
-    <p>16+21は？<botton onclick="showAnser();">解答を見る</botton></p>
+    <p>16+21は？<button onclick="showAnser();">解答を見る</button></p>
     <script>
         function showAnser() {
             let anser = 37;
