--- a/training_js03-2/tahiti.html
+++ b/training_js03-2/tahiti.html
@@ -14,7 +14,11 @@
     </style>
 </head>
 <body>
-    <h1>タヒチの風景</h1>
-    <img src="tahiti01.jpg"onmouseenter="alert('タヒチの写真です。');">
+    <img src="tahiti01.jpg"onclick="photolnfo()">
+    <script>
+        function photolnfo() {
+            alert('タヒチの写真です。');
+        }
+    </script>
 </body>
 </html>
