--- a/training_js03/sample05-1.html
+++ b/training_js03/sample05-1.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h3>問題</h3>
-    <p>16+21は？<button onclick="showAnser();">解答を見る</button></p>
+    <p>日本の首都は？<button onclick="showAnser();">解答を見る</button></p>
     <script>
         function showAnser() {
-            let anser = 37;
+            let anser = 東京;
             alert(anser);
         }
     </script>
