--- a/training_js03/sample05-1.html
+++ b/training_js03/sample05-1.html
@@ -9,7 +9,7 @@
     <p>日本の首都は？<button onclick="showAnser();">解答を見る</button></p>
     <script>
         function showAnser() {
-            let anser = 東京;
+            let anser = '東京';
             alert(anser);
         }
     </script>
