--- a/training_js04/sample06-1.html
+++ b/training_js04/sample06-1.html
@@ -3,17 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>変数の演習</title>
+    <title>変数の利用</title>
 </head>
 <body>
-    <h1>演算子の記述</h1>
-    <p>aに3の整数値を代入する<button onclick="showAns()">解答</button></p>
+    <h1>変数の演算</h1>
+    <p>a=10、b=4の場合</p>
+    <p><button onclick="add()">足し算</button><button onclick="subtract()">引き算</button><button onclick="multiply()">掛け算</button><button onclick="divide()">割り算</button></p>
 
     <script>
-        let a = 0;
-        function showAns(){
-            a = a + 3;
-            console.log(a);
+        let a = 10 ;
+        let b = 4 ;
+        function add(){
+            answer = a + d;
+            alert(answer);
+        }
+        function subtract(){
+            answer = a - d;
+            alert(answer);
+        }
+        function multiply(){
+            answer = a * d;
+            alert(answer);
+        }
+        function divide(){
+            answer = a / d;
+            alert(answer);
         }
     </script>
 </body>
