--- a/training_js04/sample06-2.html
+++ b/training_js04/sample06-2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>変数の演算</title>
+    <title>整列の利用</title>
 </head>
 <body>
-    <h1>インクリメンタルとデクリメント</h1>
+    <h1>利用料の計算</h1>
     <p>a=5のときに、a++を実行すると？<button onclick="showInc()">解答</button></p>
     <p>a=5のときに、a--を実行すると？<button onclick="showDec()">解答</button></p>
     <script>
