--- a/training_js04/sample06-1.html
+++ b/training_js04/sample06-1.html
@@ -14,19 +14,19 @@
         let a = 10 ;
         let b = 4 ;
         function add(){
-            answer = a + d;
+            answer = a + b;
             alert(answer);
         }
         function subtract(){
-            answer = a - d;
+            answer = a - b;
             alert(answer);
         }
         function multiply(){
-            answer = a * d;
+            answer = a * b;
             alert(answer);
         }
         function divide(){
-            answer = a / d;
+            answer = a / b;
             alert(answer);
         }
     </script>
