--- a/training_js04/sample06-1.html
+++ b/training_js04/sample06-1.html
@@ -15,19 +15,19 @@
         let b = 4 ;
         function add(){
             answer = a + b;
-            alert(answer);
+            alert("答えは" + answer + "です");
         }
         function subtract(){
             answer = a - b;
-            alert(answer);
+            alert("答えは" + answer + "です");
         }
         function multiply(){
             answer = a * b;
-            alert(answer);
+            alert("答えは" + answer + "です");
         }
         function divide(){
             answer = a / b;
-            alert(answer);
+            alert("答えは" + answer + "です");
         }
     </script>
 </body>
