--- a/training_js04/sample06-2.html
+++ b/training_js04/sample06-2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>整列の利用</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <h1>利用料の計算</h1>
