--- a/training_js04/sample06-2.html
+++ b/training_js04/sample06-2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>利用料の計算</h1>
-    <p>a=5のときに、a++を実行すると？<button onclick="showInc()">解答</button></p>
+    <p>NO.</p><p>料金(a)</p><p>人数(b)</p><p>a×b</p><button onclick="showInc()">解答</button></p>
     <p>a=5のときに、a--を実行すると？<button onclick="showDec()">解答</button></p>
     <script>
         function showInc(){
