--- a/training_js07/sample08-2.html
+++ b/training_js07/sample08-2.html
@@ -14,7 +14,7 @@
         <li>アメリカ</li>
         <li>インドネシア</li>
     </ul>
-    <button onclick="showKoki()">国旗で表示</button>
+    <button onclick="showKoki()">写真表示</button>
     <script>
         let list = document.querySelectorAll('#kuni li');
         function showKoki(){
