--- a/training_js07/sample08-1.html
+++ b/training_js07/sample08-1.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h3>人口の多い国ランキング</h3>
-    <ul id="kuni">
+    <ol id="kuni">
         <li>中国</li>
         <li>インド</li>
         <li>アメリカ</li>
         <li>インドネシア</li>
-    </ul>
+    </ol>
     <button onclick="showKoki()">国旗で表示</button>
     <script>
         let list = document.querySelectorAll('#kuni li');
