--- a/training_js07/sample08-2.html
+++ b/training_js07/sample08-2.html
@@ -8,20 +8,15 @@
 <body>
     <h3>写真の一覧</h3>
     <p>以下のボタンをクリックすると、写真が一覧表示されます</p>
-    <ul id="kuni">
-        <li>中国</li>
-        <li>インド</li>
-        <li>アメリカ</li>
-        <li>インドネシア</li>
+    <ul id="image">
+
     </ul>
-    <button onclick="showKoki()">写真表示</button>
+    
+    <button onclick="showimages()">写真表示</button>
     <script>
-        let list = document.querySelectorAll('#kuni li');
-        function showKoki(){
-            list[0].textContent = '<img src="images/flag_CHN.png">'; 
-            list[1].textContent = '<img src="images/flag_IND.png">'; 
-            list[2].textContent = '<img src="images/flag_USA.png">'; 
-            list[3].textContent = '<img src="images/flag_IDN.png">'; 
+        let list = document.getElementById('#image li');
+        function showimages(){
+            list.insertAdjacentHTML('beforeend' , '<img src="images/photo_1.jpg">' + '<img src="images/photo_2.jpg">' + '<img src="images/photo_3.jpg">' + '<img src="images/photo_4.jpg">' + '<img src="images/photo_5.jpg">' + '<img src="images/photo_6.jpg">' + '<img src="images/photo_7.jpg">' + '<img src="images/photo_8.jpg">')
         }
     </script>
 </body>
