--- a/training_js07/sample08-2.html
+++ b/training_js07/sample08-2.html
@@ -14,7 +14,7 @@
     
     <button onclick="showimages()">写真表示</button>
     <script>
-        let list = document.getElementById('#image li');
+        let list = document.getElementById('image');
         function showimages(){
             list.insertAdjacentHTML('beforeend' , '<img src="images/photo_1.jpg">' + '<img src="images/photo_2.jpg">' + '<img src="images/photo_3.jpg">' + '<img src="images/photo_4.jpg">' + '<img src="images/photo_5.jpg">' + '<img src="images/photo_6.jpg">' + '<img src="images/photo_7.jpg">' + '<img src="images/photo_8.jpg">')
         }
