--- a/training_js09/sample10-1.html
+++ b/training_js09/sample10-1.html
@@ -8,8 +8,8 @@
 <body>
     <h3>問題</h3>
     <p>最も面積が大きい「県」は何県でしょう？</p>
-    <button id="btn" onclick="show()">ヒントを見る</button>
-    <span class="p1" id="red"(注意)北海道は「県」ではありません></span>
+    <button id="btn" onclick="show()">ヒントを見る</button><br>
+    <span class="p1" id="red">(注意)北海道は「県」ではありません</span>
     <script>
         function show() {
             var button = document.getElementById("bth");
