--- a/training_js09/sample10-1.html
+++ b/training_js09/sample10-1.html
@@ -17,7 +17,7 @@
             switch (clickTimes) {
                 case 1:
                     document.getElementById('red').textContent ='東北地方にあります。' ;
-                    document.getElementById("bth").innerHTML = "答えを見る";
+                    document.getElementById("btn").innerHTML = "答えを見る";
                     break;
                 default:
                     document.getElementById('red').textContent ='答えは「岩手県」です。' ;
