--- a/training_js10/sample11-1.html
+++ b/training_js10/sample11-1.html
@@ -14,7 +14,7 @@
 <body>
     <h3>問題</h3>
     <p>次の方程式を満たす解を求めなさい。</p>
-    <p class="big_font">x²-6x+8=0</p>
+    <p class="big_font">x<sup>2</sup>-6x+8=0</p>
     <button onclick="check(1)">x = 1</button>
     <button onclick="check(2)">x = 2</button>
     <button onclick="check(3)">x = 3</button>
