--- a/training_js09/sample10-2.html
+++ b/training_js09/sample10-2.html
@@ -23,9 +23,11 @@
     <div id="message" class="big_font"></div>
     <script>
         function check(x) {
-            if (x == 3) {
+            switch (x) {
+                case 3:
                 document.getElementById('message').textContent = '正解！';
-            }else{
+                break;
+                default:
                 document.getElementById('message').textContent = '間違い！';
             }
         }
