--- a/training_js08/sample09-2.html
+++ b/training_js08/sample09-2.html
@@ -31,14 +31,14 @@
             let list = ['大人' , '高校生' , '中学生' ,'小学生'];
             let no = ['800' , '680' , '450' , '380'];
             let row = '<tr><th></th>';
-            for (let j = 0; j <= list.length; j++){
+            for (let j = 0; j == list.length; j++){
                 row = row + '<th>' + list[j] + '</th>';
             }
             row = row + '</tr>';
             document.getElementById('t_head').insertAdjacentHTML('beforeend', row);
 
             for (let i = 1; i <= 5 ; i++){
-                let row = '<tr><th>' + i + '</th>';
+                let row = '<tr><th>' + i +'人'+ '</th>';
                 for (let j = 0; j <= list.length; j++){
                     row = row + '<tb>' + i*no[j] + '</td>';
                 }
