--- a/training_js08/sample09-2.html
+++ b/training_js08/sample09-2.html
@@ -31,7 +31,7 @@
             let list = ['大人' , '高校生' , '中学生' ,'小学生'];
             let no = ['800' , '680' , '450' , '380'];
             let row = '<tr><th></th>';
-            for (let j = 0; j == list.length; j++){
+            for (let j = 0; j+1 <= list.length; j++){
                 row = row + '<th>' + list[j] + '</th>';
             }
             row = row + '</tr>';
@@ -39,8 +39,8 @@
 
             for (let i = 1; i <= 5 ; i++){
                 let row = '<tr><th>' + i +'人'+ '</th>';
-                for (let j = 0; j <= list.length; j++){
-                    row = row + '<tb>' + i*no[j] + '</td>';
+                for (let j = 0; j <= no.length; j++){
+                    row = row + '<tb>' + i*no[j] +'円'+ '</td>';
                 }
                 row = row + '</tr>';
                 document.getElementById('t_body').insertAdjacentHTML('beforeend', row);
