--- a/training_js08/sample09-2.html
+++ b/training_js08/sample09-2.html
@@ -30,17 +30,17 @@
         function createTable() {
             let list = ['大人' , '高校生' , '中学生' ,'小学生'];
             let no = ['800' , '680' , '450' , '380'];
-            let row = '<tr><th></th>';
+            let row = '<th>';
             for (let j = 0; j+1 <= list.length; j++){
-                row = row + '<th>' + list[j] + '</th>';
+                row = row + '<td>' + list[j] + '</td>';
             }
-            row = row + '</tr>';
+            row = row + '</th>';
             document.getElementById('t_head').insertAdjacentHTML('beforeend', row);
 
             for (let i = 1; i <= 5 ; i++){
-                let row = '<tr><th>' + i +'人'+ '</th>';
-                for (let j = 0; j <= no.length; j++){
-                    row = row + '<tb>' + i*no[j] +'円'+ '</td>';
+                let row = '<tr><td>' + i +'人'+ '</td>';
+                for (let j = 0; j+1 <= no.length; j++){
+                    row = row + '<td>' + i*no[j] +'円'+ '</td>';
                 }
                 row = row + '</tr>';
                 document.getElementById('t_body').insertAdjacentHTML('beforeend', row);
