--- a/training_js05/sample07-2.html
+++ b/training_js05/sample07-2.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>座席の予約</h1>
-    東京会議<span class="p1" id="red"（予約受付中）></span></br>
+    東京会議<span class="p1" id="red">（予約受付中）</span></br>
     <button onclick="yoyaku()" id="yoyaku"> 予約する</button>
 </body>
 <script>
