--- a/training_js12/sample13-1.html
+++ b/training_js12/sample13-1.html
@@ -26,7 +26,7 @@
                 break;
             }
         }
-        document.getElementById('message').textContent = "答えは" + kotae + "です。"
+        document.getElementById('message').textContent = "答えは" + kotae + "です。";
     }
 
     function check(num){
