--- a/training_js12/sample13-1.html
+++ b/training_js12/sample13-1.html
@@ -17,7 +17,7 @@
 <p>１、２、３、４、５、６、７、８、９、１０で</p>
 <p>割り切れる最小の数値をJavaScriptで求めます。</p>
 <button onclick="show()">結果を見る</button>
-<div id="message" class="kekka">ここに結果が表示されます。</div>
+<div id="message">ここに結果が表示されます。</div>
 <script>
     function show() {
         for (let i = 10; i <= 1000000000; i++ ){
