--- a/training_js13/sample14-1.html
+++ b/training_js13/sample14-1.html
@@ -39,6 +39,7 @@
                 }
                 return result;
             }
+            document.getElementById('message').textContent = min + "~" + max + "で割り切れる最小の数値は" + result + "です。";
         }
     </script>
 </body>
