--- a/training_js13/sample14-1.html
+++ b/training_js13/sample14-1.html
@@ -36,11 +36,11 @@
                 }
                 return result;
             }
-            
+
             function show() {
             let min = parseInt(prompt('範囲の最小値を1~10で入力してください'));
             let max = parseInt(prompt('範囲の最大値を1~10で入力してください'));
-            document.getElementById('message').textContent = min + "~" + max + "で割り切れる最小の数値は" + result + "です。";
+            document.getElementById('message').textContent = min + "~" + max + "で割り切れる最小の数値は" + findLCMInRange(min, max) + "です。";
         }
     </script>
 </body>
