--- a/training_js13/sample14-1.html
+++ b/training_js13/sample14-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>数値の入力</title>
+    <title>数値の入力とエラー処理</title>
     <style>
         #message {
             width: 500px;
