--- a/training_js14/sample15-1.html
+++ b/training_js14/sample15-1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プロパティ</title>
 <style>
-    #box{
+    #box1{
         border: 2px solid #000;
     }
     #message{
