--- a/training_js14/sample15-1.html
+++ b/training_js14/sample15-1.html
@@ -7,9 +7,11 @@
 <style>
     #box1{
         border: 2px solid #000;
+        width: auto;
     }
     #message{
         border: 2px solid #000;
+        width: auto;
     }
 </style>
 </head>
