--- a/training_js14/sample15-1.html
+++ b/training_js14/sample15-1.html
@@ -7,11 +7,11 @@
 <style>
     #box1{
         border: 2px solid #000;
-        width: auto;
+        width: 40%;
     }
     #message{
         border: 2px solid #000;
-        width: auto;
+        width: 40%;
     }
 </style>
 </head>
