--- a/training_js14/sample15-1.html
+++ b/training_js14/sample15-1.html
@@ -8,13 +8,12 @@
     #box1{
         border: 2px solid #000;
         width: 39%;
+        margin-bottom: 10px;
     }
     #message{
         border: 2px solid #000;
         width: 39%;
-    }
-    #button{
-        line-height: 8px;
+        margin-top: 10px;
     }
 </style>
 </head>
