--- a/training_js14/sample15-1.html
+++ b/training_js14/sample15-1.html
@@ -26,7 +26,7 @@
     <ul><li>東京都</li><li>神奈川県</li><li>大阪府</li></ul>
 </div>
 <button onclick="show()">HTMLを表示</button>
-<div id="message">ここに結果が表示されます。</div>
+<div id="message">ここにHTMLが表示されます。</div>
 
 <script>
     function show(){
